antlr/yars_parser.go
// Code generated from antlr/Yars.g4 by ANTLR 4.10.1. DO NOT EDIT.

package antlr // Yars
import (
	"fmt"
	"strconv"
	"sync"

	"github.com/antlr/antlr4/runtime/Go/antlr"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = strconv.Itoa
var _ = sync.Once{}

type YarsParser struct {
	*antlr.BaseParser
}

var yarsParserStaticData struct {
	once                   sync.Once
	serializedATN          []int32
	literalNames           []string
	symbolicNames          []string
	ruleNames              []string
	predictionContextCache *antlr.PredictionContextCache
	atn                    *antlr.ATN
	decisionToDFA          []*antlr.DFA
}

func yarsParserInit() {
	staticData := &yarsParserStaticData
	staticData.literalNames = []string{
		"", "'int32'", "'uint32'", "'float32'", "'bool'", "'string'", "'not'",
		"'and'", "'or'", "'in'", "'+'", "'-'", "'*'", "'unit'", "'action'",
		"'project'", "'recommend'", "", "'{'", "'}'", "'['", "']'", "'('", "')'",
		"';'", "':'", "'@'", "','", "'.'",
	}
	staticData.symbolicNames = []string{
		"", "INT32", "UINT32", "FLOAT32", "BOOL", "STRING", "NOT", "AND", "OR",
		"IN", "PLUS", "MINUS", "MUL", "UNIT", "ACTION", "PROJECT", "RECOMMEND",
		"IDENTIFIER", "L_CURLY", "R_CURLY", "L_BRACKET", "R_BRACKET", "L_RBRACKET",
		"R_RBRACKET", "SEMI", "COLON", "AT", "COMMA", "DOT", "WHITESPACE",
	}
	staticData.ruleNames = []string{
		"project", "actionStatement", "recommendStatement", "paramsDecl", "paramDecl",
		"expression", "lvalue", "binaryOps", "unaryOps", "unitStatement", "fieldsDecl",
		"fieldDecl", "type_", "arrayType", "baseType", "eos",
	}
	staticData.predictionContextCache = antlr.NewPredictionContextCache()
	deserializer := antlr.NewATNDeserializer(nil)
	staticData.atn = deserializer.Deserialize(staticData.serializedATN)
	atn := staticData.atn
	staticData.decisionToDFA = make([]*antlr.DFA, len(atn.DecisionToState))
	decisionToDFA := staticData.decisionToDFA
	for index, state := range atn.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(state, index)
	}
}

// YarsParserInit initializes any static state used to implement YarsParser. By default the
// static state used to implement the parser is lazily initialized during the first call to
// NewYarsParser(). You can call this function if you wish to initialize the static state ahead
// of time.
func YarsParserInit() {
	staticData := &yarsParserStaticData
	staticData.once.Do(yarsParserInit)
}

// NewYarsParser produces a new parser instance for the optional input antlr.TokenStream.
func NewYarsParser(input antlr.TokenStream) *YarsParser {
	YarsParserInit()
	this := new(YarsParser)
	this.BaseParser = antlr.NewBaseParser(input)
	staticData := &yarsParserStaticData
	this.Interpreter = antlr.NewParserATNSimulator(this, staticData.atn, staticData.decisionToDFA, staticData.predictionContextCache)
	this.RuleNames = staticData.ruleNames
	this.LiteralNames = staticData.literalNames
	this.SymbolicNames = staticData.symbolicNames
	this.GrammarFileName = "Yars.g4"

	return this
}

// YarsParser tokens.
const (
	YarsParserEOF        = antlr.TokenEOF
	YarsParserINT32      = 1
	YarsParserUINT32     = 2
	YarsParserFLOAT32    = 3
	YarsParserBOOL       = 4
	YarsParserSTRING     = 5
	YarsParserNOT        = 6
	YarsParserAND        = 7
	YarsParserOR         = 8
	YarsParserIN         = 9
	YarsParserPLUS       = 10
	YarsParserMINUS      = 11
	YarsParserMUL        = 12
	YarsParserUNIT       = 13
	YarsParserACTION     = 14
	YarsParserPROJECT    = 15
	YarsParserRECOMMEND  = 16
	YarsParserIDENTIFIER = 17
	YarsParserL_CURLY    = 18
	YarsParserR_CURLY    = 19
	YarsParserL_BRACKET  = 20
	YarsParserR_BRACKET  = 21
	YarsParserL_RBRACKET = 22
	YarsParserR_RBRACKET = 23
	YarsParserSEMI       = 24
	YarsParserCOLON      = 25
	YarsParserAT         = 26
	YarsParserCOMMA      = 27
	YarsParserDOT        = 28
	YarsParserWHITESPACE = 29
)

// YarsParser rules.
const (
	YarsParserRULE_project            = 0
	YarsParserRULE_actionStatement    = 1
	YarsParserRULE_recommendStatement = 2
	YarsParserRULE_paramsDecl         = 3
	YarsParserRULE_paramDecl          = 4
	YarsParserRULE_expression         = 5
	YarsParserRULE_lvalue             = 6
	YarsParserRULE_binaryOps          = 7
	YarsParserRULE_unaryOps           = 8
	YarsParserRULE_unitStatement      = 9
	YarsParserRULE_fieldsDecl         = 10
	YarsParserRULE_fieldDecl          = 11
	YarsParserRULE_type_              = 12
	YarsParserRULE_arrayType          = 13
	YarsParserRULE_baseType           = 14
	YarsParserRULE_eos                = 15
)

// IProjectContext is an interface to support dynamic dispatch.
type IProjectContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsProjectContext differentiates from other interfaces.
	IsProjectContext()
}

type ProjectContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyProjectContext() *ProjectContext {
	var p = new(ProjectContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = YarsParserRULE_project
	return p
}

func (*ProjectContext) IsProjectContext() {}

func NewProjectContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ProjectContext {
	var p = new(ProjectContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = YarsParserRULE_project

	return p
}

func (s *ProjectContext) GetParser() antlr.Parser { return s.parser }

func (s *ProjectContext) PROJECT() antlr.TerminalNode {
	return s.GetToken(YarsParserPROJECT, 0)
}

func (s *ProjectContext) IDENTIFIER() antlr.TerminalNode {
	return s.GetToken(YarsParserIDENTIFIER, 0)
}

func (s *ProjectContext) SEMI() antlr.TerminalNode {
	return s.GetToken(YarsParserSEMI, 0)
}

func (s *ProjectContext) EOF() antlr.TerminalNode {
	return s.GetToken(YarsParserEOF, 0)
}

func (s *ProjectContext) AllUnitStatement() []IUnitStatementContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IUnitStatementContext); ok {
			len++
		}
	}

	tst := make([]IUnitStatementContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IUnitStatementContext); ok {
			tst[i] = t.(IUnitStatementContext)
			i++
		}
	}

	return tst
}

func (s *ProjectContext) UnitStatement(i int) IUnitStatementContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IUnitStatementContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IUnitStatementContext)
}

func (s *ProjectContext) AllActionStatement() []IActionStatementContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IActionStatementContext); ok {
			len++
		}
	}

	tst := make([]IActionStatementContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IActionStatementContext); ok {
			tst[i] = t.(IActionStatementContext)
			i++
		}
	}

	return tst
}

func (s *ProjectContext) ActionStatement(i int) IActionStatementContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IActionStatementContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IActionStatementContext)
}

func (s *ProjectContext) AllRecommendStatement() []IRecommendStatementContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IRecommendStatementContext); ok {
			len++
		}
	}

	tst := make([]IRecommendStatementContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IRecommendStatementContext); ok {
			tst[i] = t.(IRecommendStatementContext)
			i++
		}
	}

	return tst
}

func (s *ProjectContext) RecommendStatement(i int) IRecommendStatementContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IRecommendStatementContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IRecommendStatementContext)
}

func (s *ProjectContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ProjectContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ProjectContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(YarsListener); ok {
		listenerT.EnterProject(s)
	}
}

func (s *ProjectContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(YarsListener); ok {
		listenerT.ExitProject(s)
	}
}

func (p *YarsParser) Project() (localctx IProjectContext) {
	this := p
	_ = this

	localctx = NewProjectContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, YarsParserRULE_project)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(32)
		p.Match(YarsParserPROJECT)
	}
	{
		p.SetState(33)
		p.Match(YarsParserIDENTIFIER)
	}
	{
		p.SetState(34)
		p.Match(YarsParserSEMI)
	}
	p.SetState(40)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for ((_la)&-(0x1f+1)) == 0 && ((1<<uint(_la))&((1<<YarsParserUNIT)|(1<<YarsParserACTION)|(1<<YarsParserRECOMMEND))) != 0 {
		p.SetState(38)
		p.GetErrorHandler().Sync(p)

		switch p.GetTokenStream().LA(1) {
		case YarsParserUNIT:
			{
				p.SetState(35)
				p.UnitStatement()
			}

		case YarsParserACTION:
			{
				p.SetState(36)
				p.ActionStatement()
			}

		case YarsParserRECOMMEND:
			{
				p.SetState(37)
				p.RecommendStatement()
			}

		default:
			panic(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
		}

		p.SetState(42)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}
	{
		p.SetState(43)
		p.Match(YarsParserEOF)
	}

	return localctx
}

// IActionStatementContext is an interface to support dynamic dispatch.
type IActionStatementContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// GetName returns the name token.
	GetName() antlr.Token

	// GetActor returns the actor token.
	GetActor() antlr.Token

	// GetObject returns the object token.
	GetObject() antlr.Token

	// SetName sets the name token.
	SetName(antlr.Token)

	// SetActor sets the actor token.
	SetActor(antlr.Token)

	// SetObject sets the object token.
	SetObject(antlr.Token)

	// IsActionStatementContext differentiates from other interfaces.
	IsActionStatementContext()
}

type ActionStatementContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
	name   antlr.Token
	actor  antlr.Token
	object antlr.Token
}

func NewEmptyActionStatementContext() *ActionStatementContext {
	var p = new(ActionStatementContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = YarsParserRULE_actionStatement
	return p
}

func (*ActionStatementContext) IsActionStatementContext() {}

func NewActionStatementContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ActionStatementContext {
	var p = new(ActionStatementContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = YarsParserRULE_actionStatement

	return p
}

func (s *ActionStatementContext) GetParser() antlr.Parser { return s.parser }

func (s *ActionStatementContext) GetName() antlr.Token { return s.name }

func (s *ActionStatementContext) GetActor() antlr.Token { return s.actor }

func (s *ActionStatementContext) GetObject() antlr.Token { return s.object }

func (s *ActionStatementContext) SetName(v antlr.Token) { s.name = v }

func (s *ActionStatementContext) SetActor(v antlr.Token) { s.actor = v }

func (s *ActionStatementContext) SetObject(v antlr.Token) { s.object = v }

func (s *ActionStatementContext) ACTION() antlr.TerminalNode {
	return s.GetToken(YarsParserACTION, 0)
}

func (s *ActionStatementContext) AT() antlr.TerminalNode {
	return s.GetToken(YarsParserAT, 0)
}

func (s *ActionStatementContext) SEMI() antlr.TerminalNode {
	return s.GetToken(YarsParserSEMI, 0)
}

func (s *ActionStatementContext) AllIDENTIFIER() []antlr.TerminalNode {
	return s.GetTokens(YarsParserIDENTIFIER)
}

func (s *ActionStatementContext) IDENTIFIER(i int) antlr.TerminalNode {
	return s.GetToken(YarsParserIDENTIFIER, i)
}

func (s *ActionStatementContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ActionStatementContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ActionStatementContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(YarsListener); ok {
		listenerT.EnterActionStatement(s)
	}
}

func (s *ActionStatementContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(YarsListener); ok {
		listenerT.ExitActionStatement(s)
	}
}

func (p *YarsParser) ActionStatement() (localctx IActionStatementContext) {
	this := p
	_ = this

	localctx = NewActionStatementContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, YarsParserRULE_actionStatement)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(45)
		p.Match(YarsParserACTION)
	}
	{
		p.SetState(46)

		var _m = p.Match(YarsParserIDENTIFIER)

		localctx.(*ActionStatementContext).name = _m
	}
	{
		p.SetState(47)

		var _m = p.Match(YarsParserIDENTIFIER)

		localctx.(*ActionStatementContext).actor = _m
	}
	{
		p.SetState(48)
		p.Match(YarsParserAT)
	}
	{
		p.SetState(49)

		var _m = p.Match(YarsParserIDENTIFIER)

		localctx.(*ActionStatementContext).object = _m
	}
	{
		p.SetState(50)
		p.Match(YarsParserSEMI)
	}

	return localctx
}

// IRecommendStatementContext is an interface to support dynamic dispatch.
type IRecommendStatementContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// GetName returns the name token.
	GetName() antlr.Token

	// GetActor returns the actor token.
	GetActor() antlr.Token

	// GetObject returns the object token.
	GetObject() antlr.Token

	// SetName sets the name token.
	SetName(antlr.Token)

	// SetActor sets the actor token.
	SetActor(antlr.Token)

	// SetObject sets the object token.
	SetObject(antlr.Token)

	// IsRecommendStatementContext differentiates from other interfaces.
	IsRecommendStatementContext()
}

type RecommendStatementContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
	name   antlr.Token
	actor  antlr.Token
	object antlr.Token
}

func NewEmptyRecommendStatementContext() *RecommendStatementContext {
	var p = new(RecommendStatementContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = YarsParserRULE_recommendStatement
	return p
}

func (*RecommendStatementContext) IsRecommendStatementContext() {}

func NewRecommendStatementContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *RecommendStatementContext {
	var p = new(RecommendStatementContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = YarsParserRULE_recommendStatement

	return p
}

func (s *RecommendStatementContext) GetParser() antlr.Parser { return s.parser }

func (s *RecommendStatementContext) GetName() antlr.Token { return s.name }

func (s *RecommendStatementContext) GetActor() antlr.Token { return s.actor }

func (s *RecommendStatementContext) GetObject() antlr.Token { return s.object }

func (s *RecommendStatementContext) SetName(v antlr.Token) { s.name = v }

func (s *RecommendStatementContext) SetActor(v antlr.Token) { s.actor = v }

func (s *RecommendStatementContext) SetObject(v antlr.Token) { s.object = v }

func (s *RecommendStatementContext) RECOMMEND() antlr.TerminalNode {
	return s.GetToken(YarsParserRECOMMEND, 0)
}

func (s *RecommendStatementContext) AT() antlr.TerminalNode {
	return s.GetToken(YarsParserAT, 0)
}

func (s *RecommendStatementContext) ParamsDecl() IParamsDeclContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IParamsDeclContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IParamsDeclContext)
}

func (s *RecommendStatementContext) AllIDENTIFIER() []antlr.TerminalNode {
	return s.GetTokens(YarsParserIDENTIFIER)
}

func (s *RecommendStatementContext) IDENTIFIER(i int) antlr.TerminalNode {
	return s.GetToken(YarsParserIDENTIFIER, i)
}

func (s *RecommendStatementContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *RecommendStatementContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *RecommendStatementContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(YarsListener); ok {
		listenerT.EnterRecommendStatement(s)
	}
}

func (s *RecommendStatementContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(YarsListener); ok {
		listenerT.ExitRecommendStatement(s)
	}
}

func (p *YarsParser) RecommendStatement() (localctx IRecommendStatementContext) {
	this := p
	_ = this

	localctx = NewRecommendStatementContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, YarsParserRULE_recommendStatement)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(52)
		p.Match(YarsParserRECOMMEND)
	}
	{
		p.SetState(53)

		var _m = p.Match(YarsParserIDENTIFIER)

		localctx.(*RecommendStatementContext).name = _m
	}
	{
		p.SetState(54)

		var _m = p.Match(YarsParserIDENTIFIER)

		localctx.(*RecommendStatementContext).actor = _m
	}
	{
		p.SetState(55)
		p.Match(YarsParserAT)
	}
	{
		p.SetState(56)

		var _m = p.Match(YarsParserIDENTIFIER)

		localctx.(*RecommendStatementContext).object = _m
	}
	{
		p.SetState(57)
		p.ParamsDecl()
	}

	return localctx
}

// IParamsDeclContext is an interface to support dynamic dispatch.
type IParamsDeclContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsParamsDeclContext differentiates from other interfaces.
	IsParamsDeclContext()
}

type ParamsDeclContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyParamsDeclContext() *ParamsDeclContext {
	var p = new(ParamsDeclContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = YarsParserRULE_paramsDecl
	return p
}

func (*ParamsDeclContext) IsParamsDeclContext() {}

func NewParamsDeclContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ParamsDeclContext {
	var p = new(ParamsDeclContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = YarsParserRULE_paramsDecl

	return p
}

func (s *ParamsDeclContext) GetParser() antlr.Parser { return s.parser }

func (s *ParamsDeclContext) L_CURLY() antlr.TerminalNode {
	return s.GetToken(YarsParserL_CURLY, 0)
}

func (s *ParamsDeclContext) R_CURLY() antlr.TerminalNode {
	return s.GetToken(YarsParserR_CURLY, 0)
}

func (s *ParamsDeclContext) AllParamDecl() []IParamDeclContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IParamDeclContext); ok {
			len++
		}
	}

	tst := make([]IParamDeclContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IParamDeclContext); ok {
			tst[i] = t.(IParamDeclContext)
			i++
		}
	}

	return tst
}

func (s *ParamsDeclContext) ParamDecl(i int) IParamDeclContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IParamDeclContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IParamDeclContext)
}

func (s *ParamsDeclContext) AllEos() []IEosContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IEosContext); ok {
			len++
		}
	}

	tst := make([]IEosContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IEosContext); ok {
			tst[i] = t.(IEosContext)
			i++
		}
	}

	return tst
}

func (s *ParamsDeclContext) Eos(i int) IEosContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IEosContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IEosContext)
}

func (s *ParamsDeclContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ParamsDeclContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ParamsDeclContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(YarsListener); ok {
		listenerT.EnterParamsDecl(s)
	}
}

func (s *ParamsDeclContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(YarsListener); ok {
		listenerT.ExitParamsDecl(s)
	}
}

func (p *YarsParser) ParamsDecl() (localctx IParamsDeclContext) {
	this := p
	_ = this

	localctx = NewParamsDeclContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, YarsParserRULE_paramsDecl)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(59)
		p.Match(YarsParserL_CURLY)
	}
	p.SetState(65)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for _la == YarsParserIDENTIFIER {
		{
			p.SetState(60)
			p.ParamDecl()
		}
		{
			p.SetState(61)
			p.Eos()
		}

		p.SetState(67)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}
	{
		p.SetState(68)
		p.Match(YarsParserR_CURLY)
	}

	return localctx
}

// IParamDeclContext is an interface to support dynamic dispatch.
type IParamDeclContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// GetName returns the name token.
	GetName() antlr.Token

	// SetName sets the name token.
	SetName(antlr.Token)

	// IsParamDeclContext differentiates from other interfaces.
	IsParamDeclContext()
}

type ParamDeclContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
	name   antlr.Token
}

func NewEmptyParamDeclContext() *ParamDeclContext {
	var p = new(ParamDeclContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = YarsParserRULE_paramDecl
	return p
}

func (*ParamDeclContext) IsParamDeclContext() {}

func NewParamDeclContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ParamDeclContext {
	var p = new(ParamDeclContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = YarsParserRULE_paramDecl

	return p
}

func (s *ParamDeclContext) GetParser() antlr.Parser { return s.parser }

func (s *ParamDeclContext) GetName() antlr.Token { return s.name }

func (s *ParamDeclContext) SetName(v antlr.Token) { s.name = v }

func (s *ParamDeclContext) COLON() antlr.TerminalNode {
	return s.GetToken(YarsParserCOLON, 0)
}

func (s *ParamDeclContext) Expression() IExpressionContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IExpressionContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IExpressionContext)
}

func (s *ParamDeclContext) IDENTIFIER() antlr.TerminalNode {
	return s.GetToken(YarsParserIDENTIFIER, 0)
}

func (s *ParamDeclContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ParamDeclContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ParamDeclContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(YarsListener); ok {
		listenerT.EnterParamDecl(s)
	}
}

func (s *ParamDeclContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(YarsListener); ok {
		listenerT.ExitParamDecl(s)
	}
}

func (p *YarsParser) ParamDecl() (localctx IParamDeclContext) {
	this := p
	_ = this

	localctx = NewParamDeclContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 8, YarsParserRULE_paramDecl)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(70)

		var _m = p.Match(YarsParserIDENTIFIER)

		localctx.(*ParamDeclContext).name = _m
	}
	{
		p.SetState(71)
		p.Match(YarsParserCOLON)
	}
	{
		p.SetState(72)
		p.expression(0)
	}

	return localctx
}

// IExpressionContext is an interface to support dynamic dispatch.
type IExpressionContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsExpressionContext differentiates from other interfaces.
	IsExpressionContext()
}

type ExpressionContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyExpressionContext() *ExpressionContext {
	var p = new(ExpressionContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = YarsParserRULE_expression
	return p
}

func (*ExpressionContext) IsExpressionContext() {}

func NewExpressionContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ExpressionContext {
	var p = new(ExpressionContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = YarsParserRULE_expression

	return p
}

func (s *ExpressionContext) GetParser() antlr.Parser { return s.parser }
